--- a/Amazon Shipping Calculator/amazon.css
+++ b/Amazon Shipping Calculator/amazon.css
@@ -18,3 +18,19 @@
 .tweet-button:active{
     opacity: 0.5;
 }
+
+.js-cost-input{
+    margin-right: 12px;
+    padding-left: 6px;
+    height: 32px;
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 12px;
+    border-color: rgb(179, 170, 170);
+    box-shadow: inset 1px 2px 3px rgb(0,0,0,0.05);
+}
+
+.js-cost-input::placeholder{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;
+}
