--- a/Youtube Model/youtube.css
+++ b/Youtube Model/youtube.css
@@ -56,7 +56,7 @@ body{
   border-style: none;
   border-radius: 3px;
   z-index: 2;
-  font-family: Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif, Arial;
+  font-family: Roboto, sans-serif, Arial;
 }
 .video-preview{
   margin-top: 10px;
