--- a/Amazon Shipping Calculator/amazon.css
+++ b/Amazon Shipping Calculator/amazon.css
@@ -1,4 +1,6 @@
-.tweet-button{
+.heads,
+.tails,
+.name-submit{
     color:white;
     font-size: 15px;
     font-weight: bold;
@@ -11,26 +13,66 @@
     margin-right: 12px;
     transition: box-shadow 0.15s;
 }
+.tweet-button{
+    color:white;
+    font-size: 15px;
+    font-weight: bold;
+    padding: 10px;
+    background-color: rgb(22, 187, 22);
+    border-radius: 4px;
+    border: none;  
+    cursor: pointer;  
+    vertical-align: top;
+    margin-left: 4px;
+    transition: box-shadow 0.15s;
+}
 .tweet-button:hover{
+    transform: scale(1.05);
+}
+.input{
+    padding: 10px;
+    border-radius: 3px;
+}
+.heads:hover,
+.tails:hover,
+.name-submit:hover{
     transform: scale(1.2);
     box-shadow: 5px 5px 8px rgba(0,0,0,0.15);
 }
-.tweet-button:active{
+.tweet-button:active,
+.heads:active,
+.tails:active,
+.name-submit:active{
     opacity: 0.5;
 }
-
-.js-cost-input{
-    margin-right: 12px;
-    padding-left: 6px;
-    height: 32px;
+.input-name{
+    padding: 10px;
     border-style: solid;
     border-width: 1px;
-    border-radius: 12px;
+    border-radius: 3px;
     border-color: rgb(179, 170, 170);
     box-shadow: inset 1px 2px 3px rgb(0,0,0,0.05);
+    vertical-align: top;
+}
+.name-submit{
+    color:white;
+    font-size: 15px;
+    font-weight: bold;
+    padding: 10px;
+    background-color: rgb(68, 41, 41);
+    border-radius: 3px;
+    border: none;  
+    cursor: pointer;  
+    vertical-align: top;
+    transition: box-shadow 0.15s;
+}
+.name-submit:hover{
+    transform: scale(1.05);
+    box-shadow: 5px 5px 8px rgba(0,0,0,0.15);
 }
 
-.js-cost-input::placeholder{
+.js-cost-input::placeholder,
+.name::placeholder{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
 }
