--- a/Practice/prac1header.css
+++ b/Practice/prac1header.css
@@ -49,12 +49,9 @@
     background-position: center; /* Center the image */
     background-repeat: no-repeat; /* Do not repeat the image */
     background-size: cover;
-    border-style: solid;
-    border-color: grey;
-    border-width: 1px;
+    border:1px solid grey;
     border-radius: 80px;
-    margin-top: 6px;
-    margin-right: 6px;
+    margin-top: 6px 6px 0 0;
     width: 0;
     display: flex;
     flex-direction: row;
