--- a/Youtube Model/header.css
+++ b/Youtube Model/header.css
@@ -101,10 +101,7 @@
     font-size: 14px;
     font-family: Arial, Helvetica, sans-serif;
     background-color: rgb(168, 156, 156);
-    padding-top: 4px;
-    padding-bottom: 4px;
-    padding-left: 8px;
-    padding-right: 8px;
+    padding-top: 4px 8px;
     border-radius: 2px;
     white-space: nowrap;
     opacity: 0;
