--- a/Dairy Farm App/body.css
+++ b/Dairy Farm App/body.css
@@ -21,7 +21,9 @@
     text-align: center;
     font-size: 18px;
     color: rgb(0, 119, 255);
-    text-decoration: underline;
+    padding-bottom: 0;
+    border-bottom: 4px solid brown;
+    margin-bottom: 12px;
 }
 .introduction{
     display: flex;
@@ -48,13 +50,13 @@
     display: flex;
     align-items: center;
     padding: auto;
-    width: 400px;
     height: 400px;
 }
 .intro-image{
-    height: 396px;
-    width: 399px;
-    object-fit: cover;
+    flex: 1;
+    height:100%;
+    width: 100%;
+    object-fit: contain;
     object-position: center;
 }
 section h2 {
@@ -62,6 +64,11 @@ section h2 {
 }
 .about-image-container{
     margin-right: 20px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    margin-right: 30px;
 }
 .about{
     display: flex;
@@ -71,11 +78,12 @@ section h2 {
 }
 .about-image,
 .solution-image{
-    height: 300px;
-    width: 300px;
+    flex: 1;
+    height: 100%;
+    width: 100%;
     margin-left: 12px;
     margin-right: 12px;
-    border: 2px solid grey;
+    border: 2px solid rgb(64, 186, 226);
     border-radius: 3px;
     box-shadow: 5px 5px 10px black;
 }
@@ -83,7 +91,13 @@ section h2 {
 .solution-image:hover{
     transform: scale(1.05);
 }
-
+.title-div{
+    flex: 1;
+    text-align: center;
+    font-size: 18px;
+    color: rgb(0, 119, 255);
+    border-bottom: 4px solid brown;
+}
 form input, form textarea {
     width: 100%;
     padding: 8px;
