--- a/Dairy Farm App/header.css
+++ b/Dairy Farm App/header.css
@@ -11,8 +11,8 @@ body, html {
     position: relative;
     padding: 20px;
     top: 0;
-    left: -10;
-    right: -10;
+    margin-left: -60px;
+    margin-right: -60px;
     z-index: 100;
     height: 140px;
     font-family: Arial, Helvetica, sans-serif;
@@ -34,6 +34,8 @@ body, html {
     flex-direction: row;
     column-gap: 10px;
     row-gap: 10px;
+    margin-left: 0;
+    margin-right: 0;
 }
 .logo-banner{
     height: 100px;
@@ -59,7 +61,7 @@ body, html {
     color: rgb(32, 155, 236);
 }
 .dairy{
-    color: rgb(163, 41, 41);
+    color:black;
     flex:1;
     font-size: 20px;
     white-space: nowrap;
@@ -72,13 +74,13 @@ body, html {
 }
 .dairy-name{
     margin-bottom: 0;
+    font-family:Georgia, 'Times New Roman', Times, serif;
 }
 .dairy-desc{
     margin-top: 2px;
 }
 .nav-bar{
     color: rgb(0, 0, 0);
-    margin-top: 0;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
     background-color: wheat;
@@ -86,8 +88,8 @@ body, html {
     position: -webkit-sticky; 
     position: sticky;
     top: 0;
-    left: -10;
-    right: -10;
+    margin-left: -60px;
+    margin-right: -60px;
     z-index: 200;
     display: flex;
     flex-direction: row;
@@ -102,6 +104,8 @@ nav ul {
     flex-direction: row;
     justify-content: space-between;
     row-gap: 10px;
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
     list-style: none;
     padding: 0;
     top: 0;
@@ -109,6 +113,9 @@ nav ul {
     right: -10;
     margin-top: 20px;
     margin-bottom: 2px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
     align-items: center;
     white-space: nowrap;
 }
@@ -123,8 +130,12 @@ nav ul li {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
     align-items: center;
     white-space: nowrap;
+    
     row-gap: 10px;
     margin-right: 14px;
 }
