--- a/Dairy Farm App/header.css
+++ b/Dairy Farm App/header.css
@@ -1,7 +1,7 @@
 body, html {
     margin: 0;
-    padding-right: 30px;
-    padding-left: 30px;
+    padding-right: 100px;
+    padding-left: 100px;
     font-family: 'Arial', sans-serif;
     color: #333;
     background: whitesmoke;
@@ -11,8 +11,8 @@ body, html {
     position: relative;
     padding: 20px;
     top: 0;
-    margin-left: -60px;
-    margin-right: -60px;
+    margin-left: -200px;
+    margin-right: -300px;
     z-index: 100;
     height: 140px;
     font-family: Arial, Helvetica, sans-serif;
@@ -83,13 +83,15 @@ body, html {
     color: rgb(0, 0, 0);
     font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
-    background-color: wheat;
-    padding: 10px;
+    background-color: rgb(52, 190, 236);
+    padding: 0;
     position: -webkit-sticky; 
     position: sticky;
     top: 0;
-    margin-left: -60px;
-    margin-right: -60px;
+    border: 2px solid rgb(202, 175, 175);
+    border-radius: 12px;
+    margin-left: -200px;
+    margin-right: -200px;
     z-index: 200;
     display: flex;
     flex-direction: row;
@@ -104,24 +106,16 @@ nav ul {
     flex-direction: row;
     justify-content: space-between;
     row-gap: 10px;
-    border-bottom-left-radius: 4px;
-    border-bottom-right-radius: 4px;
     list-style: none;
-    padding: 0;
     top: 0;
     left: -10;
     right: -10;
-    margin-top: 20px;
-    margin-bottom: 2px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    white-space: nowrap;
+    margin-top: 6px;
+    margin-bottom: 6px;
 }
 
 nav ul li {
-    padding: 12px;
+    padding-top: 2px;
     left: -10;
     right: -10;
     left: 0;
@@ -131,13 +125,8 @@ nav ul li {
     flex-direction: row;
     justify-content: space-between;
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
     white-space: nowrap;
-    
-    row-gap: 10px;
-    margin-right: 14px;
+    row-gap: 8px;
 }
 
 nav ul li a {
