--- a/Rock Paper Scissors/ropasci.css
+++ b/Rock Paper Scissors/ropasci.css
@@ -1,11 +1,16 @@
+body{
+    background-color: black;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+}
 .tweet-button{
     color:white;
     font-size: 15px;
     font-weight: bold;
     padding: 10px;
-    background-color: rgb(2,158,258);
-    border-radius: 18px;
-    border: none;  
+    border-radius: 50px;
+    border: 2px solid wheat;
+    background-color: transparent;  
     cursor: pointer;  
     vertical-align: top;
     margin-left: 12px;
@@ -17,4 +22,25 @@
 }
 .tweet-button:active{
     opacity: 0.5;
+}
+.result{
+    color: white;
+    font-size: 25px;
+    font-weight: bold;
+    margin-top: 50px;
+}
+.score{ 
+    margin-top: 60px;
+}
+.reset-score-button{
+    background-color: white;
+    color: black;
+    border: none;
+    font-size: 15px;
+    padding: 10px 15px;
+
+}
+.move-icon{
+    height: 50px;
+    width: 50px;
 }
